# batch_niistats

./: .gitattributes  .gitignore  README.md  batch_niistats.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
batch_niistats/: cli.py  utils.py
src/batch_niistats/: cli.py
src/batch_niistats/modules/: nii.py  utils.py
src/modules/: nii.py  utilities.py
tests/: test_cli.py  test_nii.py  test_utils.py
tests/data/: dki_kfa.nii  sample_datalist.csv  sample_datalist_nospmsyntax.csv  sample_datalist_volumecol.csv
