[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-niistats"
version = "1.0.1"
description = "Batch calculator for .nii file statistics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Carolyn McClaskey", email = "carolyn.mcclaskey@gmail.com" }
]

dependencies = [
  "numpy",
  "pandas",
  "nibabel"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/mcclaskey/batch_niistats"

[project.scripts]
batch_niistats = "batch_niistats.cli:main"

[project.optional-dependencies]
dev = ["pytest","pytest-mock","pytest-cov","flake8"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]